fix(pivotgrid): Make grid cells non-wrapable

--- a/packages/default/scss/pivotgrid/_layout.scss
+++ b/packages/default/scss/pivotgrid/_layout.scss
@@ -2,6 +2,10 @@
 
     .k-pivot {
         position: relative;
+
+        .k-grid td {
+            white-space: nowrap;
+      }
     }
 
     .k-pivot-toolbar {
